--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "Ghost On A Train"
   avatar           : "/assets/images/bavi.png"   # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "She's my baby folkssssss hehe"
+  bio              : "Happy Anniversary!!! Mwwwaaaaaahhhh. Love you idiot <3. I know how hard you work, hope this helps a little <3 <3"
   location         : "Somewhere"
   email            :
   links:
